添加算法和多线程测试代码